@@ -12,9 +12,10 @@ public class ConvertList2ArrayTest {
     public void when7ElementsThen9() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7),
+                List.of(1, 2, 3, 4, 5, 6, 7),
                 3
         );
+
         int[][] expect = {
                 {1, 2, 3},
                 {4, 5, 6},
@@ -31,7 +32,7 @@ public class ConvertList2ArrayTest {
         listarr.add(new int[]{3, 4, 5, 6});
         List<Integer> result = list.convert(listarr);
 
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6);
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6);
 
 
         assertThat(result, is(expect));
